--- a/Flight_Fare_Prediction.ipynb
+++ b/Flight_Fare_Prediction.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_excel(r\"C:\\Users\\MOHIT CHOUKSEY\\Flight Fare Prediction\\Data\\Data_Train.xlsx\")"
+    "train_data = pd.read_excel(r\"C:\\Users\Flight Fare Prediction\\Data\\Data_Train.xlsx\")"
    ]
   },
   {
